<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar_email_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar_password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

    </LinearLayout>
</RelativeLayout>